--- a/portfolio.css
+++ b/portfolio.css
@@ -1,530 +1,523 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    scroll-behavior: smooth;
-    font-family: 'poppins,'sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+  font-family: "poppins," sans-serif;
 }
-:root{
-    --bg-color: #1f242d;
-    --second-bg-color: #323946;
-    --text-color: #fff;
-    --main-color: #0ef;
+:root {
+  --bg-color: #1f242d;
+  --second-bg-color: #323946;
+  --text-color: #fff;
+  --main-color: #0ef;
 }
-html{
-    font-size: 62.5%;
-    overflow: auto;
+html {
+  font-size: 62.5%;
+  overflow: auto;
 }
-body{
-    background: var(--bg-color);
-    color: var(--text-color);
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
 }
-section{
-    min-height: 100vh;
-    padding: 7rem 9% 2rem;
+section {
+  min-height: 100vh;
+  padding: 7rem 9% 2rem;
 }
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 2rem 9%;
-    background: var(--bg-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
-.header.sticky{
-    border-bottom: .1rem solid rgba(0,0,0,.2);
+.header.sticky {
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
 }
-.logo{
-    font-size: 2.5rem;
-    color: var(--text-color);
-    font-weight: 600;
-    cursor: default;
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+  font-weight: 600;
+  cursor: default;
 }
-.navbar a{
-    font-size: 1.7rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    transition: 3s;
+.navbar a {
+  font-size: 1.7rem;
+  color: var(--text-color);
+  margin-left: 4rem;
+  transition: 3s;
 }
 .navbar a:hover,
-.navbar a.active{
-    color: var(--main-color);
-
+.navbar a.active {
+  color: var(--main-color);
 }
 #menu-icon {
-    font-size: 3.6rem;
-    color: var(--text-color);
-    display: none;
+  font-size: 3.6rem;
+  color: var(--text-color);
+  display: none;
 }
-.home{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.home-content h3{
-    font-size: 3.2rem;
-    font-weight: 700;
-    margin-left: 1rem;
+.home-content h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+  margin-left: 1rem;
 }
-.home-content h3:nth-of-type(2){
-    margin-bottom: 2rem;
+.home-content h3:nth-of-type(2) {
+  margin-bottom: 2rem;
 }
-span{
-    color: var(--main-color);
+span {
+  color: var(--main-color);
 }
-.home-content h1{
-    font-size: 5.6rem;
-    font-weight: 700;
-    line-height: 1.3;
+.home-content h1 {
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
 }
-.social-media a{
-   display: inline-flex;
-   justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: transparent;
-    border: .2rem solid var(--main-color);
-    border-radius: 50%;
-    font-size: 2rem;
-    color: var(--main-color);
-    margin: 3rem 1.8rem 30 0;
-    margin-left: 1rem;
-    transition: .5s ease;
+.social-media a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  background: transparent;
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 3rem 1.8rem 30 0;
+  margin-left: 1rem;
+  transition: 0.5s ease;
 }
-.social-media a:hover{
-    background: var(--main-color);
-    color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
+.social-media a:hover {
+  background: var(--main-color);
+  color: var(--second-bg-color);
+  box-shadow: 0 0 1rem var(--main-color);
 }
-.btn{
-    display: inline-block;
-    padding: 1rem 2.5rem;
-    background: var(--main-color);
-    border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
-    font-size: 1.8rem;
-    color: var(--second-bg-color);
-    letter-spacing: .1rem;
-    font-weight: 600;
-    transition: .5s ease; 
+.btn {
+  display: inline-block;
+  padding: 1rem 2.5rem;
+  background: var(--main-color);
+  border-radius: 4rem;
+  box-shadow: 0 0 1rem var(--main-color);
+  font-size: 1.8rem;
+  color: var(--second-bg-color);
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.5s ease;
 }
-.btn:hover{
-    box-shadow: none;
+.btn:hover {
+  box-shadow: none;
 }
-.about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    background: var(--second-bg-color);
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background: var(--second-bg-color);
 }
-.home-img img{
-    width: 300px;
-     height:300px;
-     border-radius: 100% ;
-     margin-right: 20px;
+.home-img img {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  margin-right: 20px;
 }
-.about-img img{
-    margin-right: 2rem;
+.about-img img {
+  margin-right: 2rem;
 }
-.heading{
-    text-align: center;
-    font-size: 3.2rem;
+.heading {
+  text-align: center;
+  font-size: 3.2rem;
 }
-.about-content h2{
-    text-align: left;
-    line-height: 1.3;
+.about-content h2 {
+  text-align: left;
+  line-height: 1.3;
 }
-.about-content h3{
-    font-size: 2.6rem;
+.about-content h3 {
+  font-size: 2.6rem;
 }
-.about-content p{
-    font-size: 1.6rem;
-    margin: 2rem 0 1rem;
+.about-content p {
+  font-size: 1.6rem;
+  margin: 2rem 0 1rem;
 }
-.btn{
-    margin-top:  2.5rem;
-    margin-left: 1rem;
+.btn {
+  margin-top: 2.5rem;
+  margin-left: 1rem;
 }
-.education h2{
-    margin-bottom: 5rem;
+.education h2 {
+  margin-bottom: 5rem;
 }
-.education-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem;
+.education-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
-.education-container .education-box{
-    flex: 1 1 30rem;
-    background: var(--second-bg-color);
-    padding: 3rem 2rem 4rem;
-    border-radius: 2rem;
-    text-align: center;
-    border: .2rem solid var(--bg-color);
-    transition: .5s ease;
+.education-container .education-box {
+  flex: 1 1 30rem;
+  background: var(--second-bg-color);
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  text-align: center;
+  border: 0.2rem solid var(--bg-color);
+  transition: 0.5s ease;
 }
-.education-container .education-box:hover{
-    border-color:var(--main-color);
-    transform: scale(1.02);
+.education-container .education-box:hover {
+  border-color: var(--main-color);
+  transform: scale(1.02);
 }
-.education-box h3{
-    font-size: 2.6rem;
+.education-box h3 {
+  font-size: 2.6rem;
 }
-.education-box div{
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
+.education-box div {
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
 }
-.education-box div:hover{
-    color:yellow;
+.education-box div:hover {
+  color: yellow;
 }
-.box h4{
-    margin: 1rem 1rem 1rem;
-    letter-spacing: .2px;
-    color:white;
-    font-size: 1.7rem;  
+.box h4 {
+  margin: 1rem 1rem 1rem;
+  letter-spacing: 0.2px;
+  color: white;
+  font-size: 1.7rem;
 }
-.exp{
-    text-align: center;
-    font-size: 3.2rem;
+.exp {
+  text-align: center;
+  font-size: 3.2rem;
 }
-.progress-bar{
-    position: relative;
-    width: 480px;
-    height: 20px;
-    background-color: #808080;
-    border-radius: 15px;
-    margin-bottom: 10px;
+.progress-bar {
+  position: relative;
+  width: 480px;
+  height: 20px;
+  background-color: #808080;
+  border-radius: 15px;
+  margin-bottom: 10px;
 }
-.progress-bar::after{
-    position: absolute;
-    content: attr(value);
-    top: -17px;
-    right: 10px;
-    color: white;
-    font-size: 18px;
+.progress-bar::after {
+  position: absolute;
+  content: attr(value);
+  top: -17px;
+  right: 10px;
+  color: white;
+  font-size: 18px;
 }
-.progress-line{
-    position: absolute;
-    width: 0%;
-    height: 21px;
-    background-color: var(--main-color);
-    border-radius: 15px;
-    top: -1px;
-    animation: animate 1.5s cubic-bezier(1,0.2,0.2,1)forwards;
+.progress-line {
+  position: absolute;
+  width: 0%;
+  height: 21px;
+  background-color: var(--main-color);
+  border-radius: 15px;
+  top: -1px;
+  animation: animate 1.5s cubic-bezier(1, 0.2, 0.2, 1) forwards;
 }
-@keyframes animate{
-    100%{
-        width: 100%;
-    }
-}
-.skill:nth-child(2){
-    margin-top: 20px;
-}
-.heading{
-    text-align: center;
-    font-size: 3.2rem;
-}
-.heading a{
-    color: white;
-}
-.project{
-    background: var(--second-bg-color);
-}
-.project h2{
-    margin-bottom: 4rem;
-}
-.portfolio-container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2.5rem;
-}
-.portfolio-container .portfolio-box{
-    position: relative;
-    border-radius: 2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
-    overflow: hidden;
-    display: flex;
-}
-.portfolio-box   img{
+@keyframes animate {
+  100% {
     width: 100%;
-    transition: .5s ease;
+  }
 }
-.portfolio-box:hover img{
-    transform: scale(1.1);
+.skill:nth-child(2) {
+  margin-top: 20px;
+}
+.heading {
+  text-align: center;
+  font-size: 3.2rem;
+}
+.heading a {
+  color: white;
+}
+.project {
+  background: var(--second-bg-color);
+}
+.project h2 {
+  margin-bottom: 4rem;
+}
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.5rem;
+}
+.portfolio-container .portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
+}
+.portfolio-box img {
+  width: 100%;
+  transition: 0.5s ease;
+}
+.portfolio-box:hover img {
+  transform: scale(1.1);
 }
 .portfolio-box .portfolio-layer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0,0,0,1),var(--main-color));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    padding: 0 4rem;
-    transform: translateY(100%);
-    transition: .5s ease;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 1), var(--main-color));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: 0.5s ease;
 }
-.portfolio-box:hover .portfolio-layer{
-    transform: translateY(0);
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(0);
 }
-.portfolio-layer h4{
-    font-size: 3rem;
+.portfolio-layer h4 {
+  font-size: 3rem;
 }
-.portfolio-layer p{
-    font-size: 1.6rem;
-    margin: .3rem 0 1rem;
+.portfolio-layer p {
+  font-size: 1.6rem;
+  margin: 0.3rem 0 1rem;
 }
-.contact h2{
-    margin-bottom: 3rem;
+.contact h2 {
+  margin-bottom: 3rem;
 }
-.contact form{
-    max-width: 70rem;
-    margin: 1rem auto;
-    text-align: center;
-    margin-bottom: 1rem;
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 1rem;
 }
-.contact form .input-box{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.contact form .input-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .contact form .input-box input,
-.contact form textarea{
-    width: 100%;
-    padding: 1.5rem;
-    font-size: 1.6rem;
-    color: var(--text-color);
-    background: var(--second-bg-color);
-    border-radius: .8rem;
-    margin: .7rem 0;
+.contact form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  color: var(--text-color);
+  background: var(--second-bg-color);
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
 }
-.contact form .input-box input{
-    width: 49%;
+.contact form .input-box input {
+  width: 49%;
 }
-.contact form textarea{
-    resize: none;
+.contact form textarea {
+  resize: none;
 }
-.contact form .btn{
-    margin-top: 2rem;
-    cursor: pointer;
+.contact form .btn {
+  margin-top: 2rem;
+  cursor: pointer;
 }
-.footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2rem 5%;
-    background: var(--second-bg-color);
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 5%;
+  background: var(--second-bg-color);
 }
-.footer-text p{
-    font-size: 1.6rem;
+.footer-text p {
+  font-size: 1.6rem;
 }
-.footer-iconTop a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: .8rem;
-    background: var(--main-color);
-    border-radius: .8rem;
-    transition: .5s ease;
+.footer-iconTop a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background: var(--main-color);
+  border-radius: 0.8rem;
+  transition: 0.5s ease;
 }
-.footer-iconTop a:hover{
-    box-shadow: 0 0 1rem var(--main-color);
+.footer-iconTop a:hover {
+  box-shadow: 0 0 1rem var(--main-color);
 }
-.footer-iconTop a i{
-    font-size: 2.4rem;
-    color: var(--second-bg-color);
+.footer-iconTop a i {
+  font-size: 2.4rem;
+  color: var(--second-bg-color);
 }
 
 /* updated css by Ranjan prajapati */
 
-html, body {
-    overflow-x: hidden;
+html,
+body {
+  overflow-x: hidden;
 }
 
-section, .header, .home, .about, .education-container, .portfolio-container, .contact form, .footer {
-    max-width: 100%;
-    overflow-x: visible;
+section,
+.header,
+.home,
+.about,
+.education-container,
+.portfolio-container,
+.contact form,
+.footer {
+  max-width: 100%;
+  overflow-x: visible;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*    rrrrrrrrrrrrrrrrrrrrrrrr    */
 
-
-
-
-
 @media (max-width: 1200px) {
-    html {
-      font-size: 55%;
-    }
+  html {
+    font-size: 55%;
   }
-  
-  @media (max-width: 991px) {
-    .header {
-      padding: 2rem 3%;
-    }
-    section {
-      padding: 10rem 3% 2rem;
-    }
-    .education,
-    .portfolio {
-      padding-bottom: 7rem;
-    }
-    .contact {
-      min-height: auto;
-    }
-    .contact form .input-box input {
-      width: 100%;
-    }
-    .footer {
-      padding: 1rem 3%;
-      flex-direction: column-reverse;
-    }
-    .footer p {
-      text-align: center;
-      margin-top: 0.5rem;
-    }
+}
+
+@media (max-width: 991px) {
+  .header {
+    padding: 2rem 3%;
   }
-  
-  @media (max-width: 768px) {
-    #menu-icon {
-      display: block;
-    }
-    .progress-bar{
-      width:100%;
-    }
-    .navbar {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      padding: 1rem 3%;
-      background: var(--bg-color);
-      border-top: .1rem solid rgba(0, 0, 0, .2);
-      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-      display: none;
-    }
-    .navbar.active {
-      display: block;
-    }
-    .navbar a {
-      display: block;
-      font-size: 2rem;
-      margin: 3rem 0;
-    }
-    .home {
-      flex-direction: column;
-    }
-    .home-content h3 {
-      font-size: 2.6rem;
-    }
-    .home-content h1 {
-      font-size: 5rem;
-    }
-    .home-img img {
-      width: 70vw;
-      margin-top: 4rem;
-    }
-    .about {
-      flex-direction: column-reverse;
-    }
-    .about img {
-      width: 70vw;
-      margin-top: 4rem;
-    }
-    .education h2,
-    .portfolio h2 {
-      margin-bottom: 3rem;
-    }
-    .portfolio-container {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-columns: 1fr;
-    }
+  section {
+    padding: 10rem 3% 2rem;
   }
-  
-  @media (max-width: 617px) {
-    .portfolio-container {
-      grid-template-columns: 1fr;
-    }
+  .education,
+  .portfolio {
+    padding-bottom: 7rem;
   }
-  
-  @media (max-width: 450px) {
-    html {
-      font-size: 50%;
-    }
-    .home-content h1 {
-      font-size: 4rem;
-    }
-    .home-content h3 {
-      font-size: 2rem;
-    }
-    .about-content h2 {
-      font-size: 2.8rem;
-    }
-    .about-content h3 {
-      font-size: 2.2rem;
-    }
-    .education-box h3 {
-      font-size: 2.2rem;
-    }
-    .education-box div {
-      font-size: 1.4rem;
-    }
-    .portfolio-box .portfolio-layer h4 {
-      font-size: 2.4rem;
-    }
-    .portfolio-box .portfolio-layer p {
-      font-size: 1.4rem;
-    }
+  .contact {
+    min-height: auto;
   }
-  
-  @media (max-width: 365px) {
-    .home-img img,
-    .about-img img {
-      width: 90vw;
-    }
-    .btn {
-      padding: 0.8rem 2rem;
-      font-size: 1.6rem;
-    }
+  .contact form .input-box input {
+    width: 100%;
   }
-  
+  .footer {
+    padding: 1rem 3%;
+    flex-direction: column-reverse;
+  }
+  .footer p {
+    text-align: center;
+    margin-top: 0.5rem;
+  }
+}
 
+@media (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
 
+  .box {
+    width: 100%; /* Make each skill box take up full width */
+    margin-bottom: 20px; /* Add some space between skill boxes */
+  }
 
+  .skill {
+    padding: 0 5%; /* Adjust padding to reduce space on sides */
+  }
 
+  .progress-bar {
+    width: 100%;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    display: none;
+  }
+  .navbar.active {
+    display: block;
+  }
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
+  .home {
+    flex-direction: column;
+  }
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+  .home-content h1 {
+    font-size: 5rem;
+  }
+  .home-img img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+  .about {
+    flex-direction: column-reverse;
+  }
+  .about img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+  .education h2,
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
+  }
+}
 
+@media (max-width: 617px) {
+  .portfolio-container {
+    grid-template-columns: 1fr;
+  }
+}
 
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+  .home-content h1 {
+    font-size: 4rem;
+  }
+  .home-content h3 {
+    font-size: 2rem;
+  }
+  .about-content h2 {
+    font-size: 2.8rem;
+  }
+  .about-content h3 {
+    font-size: 2.2rem;
+  }
+  .education-box h3 {
+    font-size: 2.2rem;
+  }
+  .education-box div {
+    font-size: 1.4rem;
+  }
+  .portfolio-box .portfolio-layer h4 {
+    font-size: 2.4rem;
+  }
+  .portfolio-box .portfolio-layer p {
+    font-size: 1.4rem;
+  }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 365px) {
+  .home-img img,
+  .about-img img {
+    width: 90vw;
+  }
+  .btn {
+    padding: 0.8rem 2rem;
+    font-size: 1.6rem;
+  }
+}
