--- a/portfolio.css
+++ b/portfolio.css
@@ -424,7 +424,7 @@ img {
   }
 
   .progress-bar {
-    width: 100%;
+    max-width: 100%;
   }
   .navbar {
     position: absolute;
@@ -448,6 +448,9 @@ img {
   .home {
     flex-direction: column;
   }
+  .home-content{
+    margin-bottom: 2rem;
+  }
   .home-content h3 {
     font-size: 2.6rem;
   }
@@ -456,21 +459,22 @@ img {
   }
   .home-img img {
     width: 70vw;
-    margin-top: 4rem;
+   margin: 2rem auto 2rem; /* Adjusted to balance top and bottom margins */
   }
   .about {
     flex-direction: column-reverse;
   }
   .about img {
     width: 70vw;
-    margin-top: 4rem;
+    margin: 4rem auto; /* Adjusted to center the image */
+    display: block;
   }
   .education h2,
   .portfolio h2 {
     margin-bottom: 3rem;
   }
   .portfolio-container {
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     grid-template-columns: 1fr;
   }
 }
