--- a/portfolio.css
+++ b/portfolio.css
@@ -447,9 +447,10 @@ img {
   }
   .home {
     flex-direction: column;
+    padding: 15rem 5%; /* Reduce padding to minimize size */
   }
   .home-content{
-    margin-bottom: 2rem;
+    margin-bottom: 1rem; /* Reduce bottom margin */
   }
   .home-content h3 {
     font-size: 2.6rem;
@@ -459,8 +460,9 @@ img {
   }
   .home-img img {
     width: 70vw;
-   margin: 2rem auto 2rem; /* Adjusted to balance top and bottom margins */
+   margin: 1rem auto 0; /* Adjusted to balance top and bottom margins */
   }
+
   .about {
     flex-direction: column-reverse;
   }
